Ci siamo quasi col formato Kindle

--- a/RetiDiCalcolatoriM.tex
+++ b/RetiDiCalcolatoriM.tex
@@ -10,6 +10,7 @@
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{polyglossia}   % language selection
+\usepackage{tocbibind}
 \setmainlanguage{italian}
 
 \frenchspacing
@@ -24,15 +25,15 @@
 \tableofcontents
 \newpage
 
-\input{Sections/Intro.tex}
-\input{Sections/Computazione.tex}
-\input{Sections/Replicazione.tex}
-\input{Sections/Comunicazione.tex}
-\input{Sections/QoS.tex}
-\input{Sections/Middleware.tex}
-\input{Sections/CORBA.tex}
-\input{Sections/COM.tex}
-\input{Sections/WS.tex}
-\input{Sections/Mobile.tex}
+\input{Chapters/Intro.tex}
+\input{Chapters/Computazione.tex}
+\input{Chapters/Replicazione.tex}
+\input{Chapters/Comunicazione.tex}
+\input{Chapters/QoS.tex}
+\input{Chapters/Middleware.tex}
+\input{Chapters/CORBA.tex}
+\input{Chapters/COM.tex}
+\input{Chapters/WS.tex}
+\input{Chapters/Mobile.tex}
 
 \end{document}
