--- a/RetiDiCalcolatoriM-Kindle.tex
+++ b/RetiDiCalcolatoriM-Kindle.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt]{book}
+\documentclass[10pt,oneside]{book}
 
 \usepackage{fontspec}      % font selection
 %\setmainfont{Cambria}
@@ -7,22 +7,22 @@
 \usepackage{polyglossia}   % language selection
 \setmainlanguage{italian}
 \usepackage{amsmath}
-
+\usepackage{hyperref}
 \usepackage{graphicx}      % graphics support
 
 \usepackage[font=small,labelformat=simple]{caption}   % customizing captions
 
 \usepackage{titlesec}      % customizing section titles
-\titleformat{\section}{\itshape\large}{}{0em}{}
+\titleformat{\chapter}{\bfseries\Large}{}{0em}{}
+\titlespacing{\chapter}{0pt}{8pt}{4pt}
+\titleformat{\section}{\bfseries\itshape}{}{0em}{}
 \titlespacing{\section}{0pt}{8pt}{4pt}
 \titleformat{\subsection}{\itshape}{}{0em}{}
 \titlespacing{\subsection}{0pt}{4pt}{2pt}
 \titleformat{\subsubsection}[runin]{\bf\scshape}{}{0em}{}
 \titlespacing{\subsubsection}{0pt}{5pt}{5pt}
 
-\usepackage[papersize={3.6in,4.8in},%
-hmargin=0.1in,%
-vmargin={0.1in,0.1in}]{geometry}  % page geometry
+\usepackage[papersize={108mm,144mm},margin=2mm]{geometry}  % page geometry
 
 \usepackage{fancyhdr}   % headers and footers
 \pagestyle{fancy}
@@ -37,7 +37,14 @@ vmargin={0.1in,0.1in}]{geometry}  % page geometry
 \setlength{\intextsep}{2pt}        % space left on top and bottom of an in-text 
 %float
 
-\title{Riassunto di studio per Reti di Calcolatori M}
+\makeatletter
+% Removes space above \chapter head
+\patchcmd{\@makechapterhead}{\vspace*{50\p@}}{}{}{}
+% Removes space above \chapter* head
+\patchcmd{\@makeschapterhead}{\vspace*{50\p@}}{}{}{}
+\makeatother
+
+\title{Riassunto di studio \\ per Reti di Calcolatori M}
 \author{Daniele Tiles \and Davide Bellettini (revisione)}
 \date{2007 - 2014}
 
@@ -47,15 +54,15 @@ vmargin={0.1in,0.1in}]{geometry}  % page geometry
 \tableofcontents
 \newpage
 
-\input{Sections/Intro.tex}
-\input{Sections/Computazione.tex}
-\input{Sections/Replicazione.tex}
-\input{Sections/Comunicazione.tex}
-\input{Sections/QoS.tex}
-\input{Sections/Middleware.tex}
-\input{Sections/CORBA.tex}
-\input{Sections/COM.tex}
-\input{Sections/WS.tex}
-\input{Sections/Mobile.tex}
+\input{Chapters/Intro.tex}
+\input{Chapters/Computazione.tex}
+\input{Chapters/Replicazione.tex}
+\input{Chapters/Comunicazione.tex}
+\input{Chapters/QoS.tex}
+\input{Chapters/Middleware.tex}
+\input{Chapters/CORBA.tex}
+\input{Chapters/COM.tex}
+\input{Chapters/WS.tex}
+\input{Chapters/Mobile.tex}
 
 \end{document}
