--- a/RetiDiCalcolatoriM-Kindle.tex
+++ b/RetiDiCalcolatoriM-Kindle.tex
@@ -1,12 +1,11 @@
-\documentclass[10pt,oneside,italian]{book}
+\documentclass[12pt,oneside]{book}
 
 \usepackage{fontspec}      % font selection
 \setmainfont{Cambria}
 %\usepackage{breqn}         % automatic equation breaking
 %\usepackage{microtype}     % microtypography, reduces hyphenation
-%\usepackage{polyglossia}   % language selection
-%\setmainlanguage{italian}
-\usepackage{babel}
+\usepackage{polyglossia}   % language selection
+\setmainlanguage{italian}
 \usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{tocbibind}
