Aggiungi capitoli (vuoti) su cloud e OpenStack

--- a/RetiDiCalcolatoriM-Kindle.tex
+++ b/RetiDiCalcolatoriM-Kindle.tex
@@ -71,5 +71,7 @@
 \include{Chapters/COM}
 \include{Chapters/WS}
 \include{Chapters/Mobile}
+\include{Chapters/Cloud}
+\include{Chapters/OpenStack}
 
 \end{document}
