--- a/RetiDiCalcolatoriM-epub.tex
+++ b/RetiDiCalcolatoriM-epub.tex
@@ -32,6 +32,8 @@
 \include{Chapters/COM}
 \include{Chapters/WS}
 \include{Chapters/Mobile}
+\include{Chapters/Cloud}
+\include{Chapters/OpenStack}
 
 % \newpage
 % \begingroup
