--- a/RetiDiCalcolatoriM.tex
+++ b/RetiDiCalcolatoriM.tex
@@ -35,5 +35,7 @@
 \input{Chapters/COM.tex}
 \input{Chapters/WS.tex}
 \input{Chapters/Mobile.tex}
+\input{Chapters/Cloud}
+\input{Chapters/OpenStack}
 
 \end{document}
